- In Courses tab, the Registra can see all the courses including the numbers of students. - In Enrollment tab, belong side with looking up students' courses feature, I need you to make a form that help Registra enroll a students to a available courses. If Students want to learn many courses, Registra can choose many options at once before clicking submit button. Students being enrolled by StudentCode. - I want you to fix that when I change the information of student, the information doesn't change, at least in UI I see. Also the time when registered student was incorrect.
- The Admin can see all how many people being in session with the website. The System Admin can revoke the session making corresponding people being disconnected. Make a tab on side bar for this feature.
